minor spelling / formatting issues uncovered by #tech

--- a/resources/style.css
+++ b/resources/style.css
@@ -33,8 +33,8 @@ body, html {
 		order: 2;
 		flex: 1 0 75%;
 		padding-left: 4rem;
-		min-width: 32rem;
-		max-width: 32rem;
+		min-width: 40rem;
+		max-width: 40rem;
 		margin-right: auto;
 		align-items: right;
 		color: whitesmoke;
@@ -78,7 +78,6 @@ body, html {
 		padding-right: 2rem;
 		width: fit-content;
 		color: whitesmoke;
-		overflow: auto;
 	}
 
 	#site_name {
